bugfix #17145 - unlocalized exceptions notified on warning level are now notified with less scary message.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -166,6 +166,12 @@ NTF_ExceptionalException=\
 	including a copy of your ide.log file as an attachment.\n\
 	The ide.log file is located in your {1} folder.
 NTF_ExceptionalExceptionTitle=Unexpected Exception
+# {0} - class name of exception
+NTF_ExceptionWarning=\
+        A {0} exception has occurred on warning level.\n\
+        System should continue working without further problems,\n\
+        see details for stack trace.
+NTF_ExceptionWarningTitle=Warning Notification
 
 # TopManager properties
 CTL_Netbeanshome_notexists=netbeans.home points to a non-existent directory.
