--- a/xml.tools/build.xml
+++ b/xml.tools/build.xml
@@ -27,8 +27,8 @@ Microsystems, Inc. All Rights Reserved.
     <property name="xml-apis" location="${binroot}/core/release/lib/ext/xml-apis.jar" />
 
     <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
-    <property name="homepage.base" value="xml.netbeans.org"/>
-    <property name="dist.base" value="http://www.netbeans.org/download/nbms/40/xml"/>
+    <property name="homepage.base" value="netbeans.org"/>
+    <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
     <property name="storepass" value="?"/>
     <property name="nbm_alias" value="nb_ide"/>
     <property name="release" value="dev"/>
@@ -121,8 +121,8 @@ Microsystems, Inc. All Rights Reserved.
         <makenbm file="../xml-tools-${release}.nbm"
                  topdir="."
                  module="netbeans/modules/xml-tools.jar"
-                 homepage="http://${homepage.base}/tools/"
-                 distribution="${dist.base}/xml-tools-${release}.nbm">
+                 homepage="http://xml.${homepage.base}/tools/"
+                 distribution="http://${dist.base}/xml-tools-${release}.nbm">
             <license file="${license.file}"/>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
         </makenbm>
