--- a/xml.text/build.xml
+++ b/xml.text/build.xml
@@ -25,8 +25,8 @@ Microsystems, Inc. All Rights Reserved.
     <property name="nbext_root" location="${nbroot}/nbbuild"/>
 
     <property name="license.file" location="${nbroot}/nbbuild/standard-nbm-license.txt"/>
-    <property name="homepage.base" value="xml.netbeans.org"/>
-    <property name="dist.base" value="http://www.netbeans.org/download/nbms/40/xml"/>
+    <property name="homepage.base" value="netbeans.org"/>
+    <property name="dist.base" value="www.netbeans.org/download/nbms/40/xml"/>
     <property name="storepass" value="?"/>
     <property name="nbm_alias" value="nb_ide"/>
     <property name="release" value="dev"/>
@@ -122,8 +122,8 @@ Microsystems, Inc. All Rights Reserved.
         <makenbm file="../xml-text-edit-${release}.nbm"
                  topdir="."
                  module="netbeans/modules/xml-text-edit.jar"
-                 homepage="http://${homepage.base}/text-edit/"
-                 distribution="${dist.base}/xml-text-edit-${release}.nbm">
+                 homepage="http://xml.${homepage.base}/text-edit/"
+                 distribution="http://${dist.base}/xml-text-edit-${release}.nbm">
             <license file="${license.file}"/>
             <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/>
         </makenbm>
