first pass at 3.4 resource bundles

--- a/api.xml/src/org/netbeans/spi/xml/cookies/Bundle.properties
+++ b/api.xml/src/org/netbeans/spi/xml/cookies/Bundle.properties
@@ -17,7 +17,7 @@ MSG_parser_internal=Using XML module internal parser.
 MSG_parser_err_1=Cannot instantiate any JAXP parser.
 # {0} location of plugged parser
 MSG_parser_plug=Using JAXP parser at {0}.
-MSG_parser_no_schema=Warning: Parser does not support XML Schema based validation, it requires DOCTYPE!
+MSG_parser_no_schema=Warning: Parser does not support XML Schema-based validation, it requires DOCTYPE!
 MSG_parser_no_schema_loc=Warning: Parser does not support specifing XML Schema location.
 # {0}=PublicID, {1}=system ID
 MSG_resolver_1=Note: Cannot resolve {0} defaulting to {1}.
@@ -30,5 +30,5 @@ MSG_unknown_parser=Using {0} XML parser implementation from unknown location.
 # {0} message of original exception
 EX_parser_ierr=Probably internal parser error: {0}
 MSG_not_a_doc=Error: Validation can be used only for XML Documents!
-MSG_no_pid=empty public ID
+MSG_no_pid=Empty public ID
 # ---
