--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
@@ -11,11 +11,11 @@
 
 ## CatalogCustomizer.java
 ACSD_CatalogCustomizer=Customizer for Sun's implementation of OASIS XML Catalog, XCatalog v0.2 and XML-related sections of TR9401.
-DESC_catalog_fmts=Recognized formats are OASIS XML Catalog, XCatalog v0.2 and XML-related sections of TR9401.
+DESC_catalog_fmts=Recognizes OASIS XML Catalog, XCatalog v0.2, and XML-related sections of TR9401.
 
-LBL_preference=Prefer Public
+LBL_preference=Prefer Public ID
 MNE_preference=P
-ACSD_preference=Prefer public IDs over system IDs during entity resolution?
+ACSD_preference=Prefer public IDs over system IDs during entity resolution.
 
 CatalogCustomizer.locationLabel.text=Catalog URL:
 CatalogCustomizer.locationLabel.mne=U
@@ -24,7 +24,7 @@ ACSD_locationTextField=URL pointing to the catalog file
 PROP_choose_file=Browse...
 MNE_file=F
 ACSD_file=Button selecting local file
-HINT_pp=Prefer public mappings over system mappings.
+HINT_pp=Prefer public IDs over system IDs during entity resolution.
 
 
 ## Catalog.java
@@ -38,10 +38,10 @@ DESC_error_loading=Error: {0}
 DESC_loaded=Sucessfully loaded and active.
 
 ## CatalogBeanInfo.java
-PROP_Catalog=Sun's Resolver 1.1
+PROP_Catalog=Sun Resolver 1.1
 PROP_Catalog_desc=Implements OASIS XML Catalog and TR9401 standards.
 PROP_catalog_name=Catalog Name
-PROP_catalog_name_desc=Name helps to identify catalog.
+PROP_catalog_name_desc=Name that identifies catalog.
 PROP_catalog_info=Catalog Info
 PROP_catalog_info_desc=Describes actual catalog state.
 
