--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/resources/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/resources/Bundle.properties
@@ -13,7 +13,7 @@
 OpenIDE-Module-Name=XML Entity Catalog
 OpenIDE-Module-Display-Category=XML
 OpenIDE-Module-Short-Description=The module allows to persistently mount entity catalogs.
-OpenIDE-Module-Long-Description=The module allows to persistently mount entity catalogs. This implementation support NetBeans native catalog and standard XML catalog. Module also offer SPI to support another catalog implementation plug in.
+OpenIDE-Module-Long-Description=The module allows to persistently mount entity catalogs. This implementation supports NetBeans native catalog and standard XML catalog. Module also offers SPI to support another catalog implementation plug in.
 
 ## mf-layer.xml
 Templates/XML/XMLCatalog.xml=OASIS XML Catalog
