--- a/xml.tax/lib/src/org/netbeans/tax/Bundle.properties
+++ b/xml.tax/lib/src/org/netbeans/tax/Bundle.properties
@@ -118,7 +118,7 @@ PROP_invalid_attribute_list_declaration_default_type=Invalid default specificati
 #{0} offending value
 EXC_invalid_attribute_value=Invalid attribute value: {0}
 
-PROP_invalid_attribute_list_declaration_type=Invalid value constrain n  attribute declaration. Use CDATA, ID, IDREF, IDREFS, ENTITY, ENTITIES, NMTOKEN, NMTOKENS, NOTATION or enumerated.
+PROP_invalid_attribute_list_declaration_type=Invalid value constraint in attribute declaration. Use CDATA, ID, IDREF, IDREFS, ENTITY, ENTITIES, NMTOKEN, NMTOKENS, NOTATION or enumerated.
 
 #{0} offenting text (may be long)
 EXC_Invalid_Entity_Decl_Internal_text=Invalid internal entity text (e.g. contains forbidden characters):\n{0}
