--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -168,10 +168,10 @@ NTF_ExceptionalException=\
 NTF_ExceptionalExceptionTitle=Unexpected Exception
 # {0} - class name of exception
 NTF_ExceptionWarning=\
-        A {0} exception has occurred on warning level.\n\
-        System should continue working without further problems,\n\
-        see details for stack trace.
-NTF_ExceptionWarningTitle=Warning Notification
+        A {0} exception has occurred.\n\
+        However, the system should continue working without further problems.\n\
+        Click Details for the stack trace.
+NTF_ExceptionWarningTitle=Warning
 
 # TopManager properties
 CTL_Netbeanshome_notexists=netbeans.home points to a non-existent directory.
