--- a/nbbuild/build.xml
+++ b/nbbuild/build.xml
@@ -306,7 +306,7 @@ ToDo:
     <echo message="Building module jarpackager..."/>
     <ant dir="../jarpackager" target="netbeans"/>
   </target>
-  <target name="all-java" depends="all-openide,all-java/api">
+  <target name="all-java" depends="all-openide,all-java/api,all-classfile">
     <echo message="Building module java..."/>
     <ant dir="../java" target="netbeans"/>
   </target>
