Fixed bug #23819 - "I18N - mnemonic key doesn't work with translated".

--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -321,3 +321,15 @@ MSG_Redefined_classes=The following classes were fixed:
 
 #Displayed in the Output Window in case that the debugger could not find any ReferenceType to be redefined.
 MSG_No_class_redefined=No class was fixed because none of classes to be fixed was loaded in the remote VM.
+
+#in the "Attach" dialog
+CTL_Host=Host:
+
+#in the "Attach" dialog
+CTL_Host_mnemonic=o
+
+#in the "Attach" dialog
+CTL_Port=Port:
+
+#in the "Attach" dialog
+CTL_Port_mnemonic=P
