--- a/o.n.core/src/org/netbeans/core/ui/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/ui/Bundle.properties
@@ -110,13 +110,16 @@ LBL_SDI_Mnemonic=S
 LBL_MDI_Mnemonic=M
 LBL_AdvancedCheckBox_Mnemonic=A
 LBL_IDEPanelName=General NetBeans Settings
-LBL_UseProxyServer=Use Proxy Server
+LBL_UseProxyServer=Use HTTP Proxy Server
 LBL_SDI=Multiple Smaller Windows Mode ("SDI")
 LBL_MDI=Full Screen Mode ("MDI")
-LBL_Server_Name=Server Name:
-LBL_Head=Edit NetBeans' basic settings.  If you are behind a firewall, you must set the proxy server.
+LBL_Server_Name=Proxy Server Name:
+LBL_Head=Set General NetBeans settings on this page.
 LBL_Port=Port:
 LBL_WindowMode=Window Mode:
+LBL_WebProxy=Web Proxy:
+LBL_ProxyDesc=If you are behind a firewall, you should set the proxy server, so that the IDE can properly direct outgoing HTTP traffic.
+
 
 # Setup wizard separator panel
 LBL_SeparatorPanelInstr=Click Finish now, or click Next for advanced setup options.
@@ -254,3 +257,4 @@ LBL_SetupWizardDescription=Description:
 LBL_SetupWizardDescription_MNE=D
 LBL_SetupWizardCheckModules=Check modules to enable:
 LBL_SetupWizardCheckModules_MNE=C
+
