bundle cleanups - map changes

--- a/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
+++ b/xml.core/src/org/netbeans/modules/xml/core/resources/Bundle.properties
@@ -16,9 +16,9 @@ OpenIDE-Module-Short-Description=The module is a base for all XML related module
 OpenIDE-Module-Long-Description=The module is a base for all XML related modules. It recognizes XML and DTD documents, which can be opened in text editor. It supports parsing of those documents into TAX (Tree API for XML) representation. It supports synchronization among document representations. It also holds all settings shared among all XML related modules.
 
 ## mf-layer.xml
-Templates/XML=XML and DTD
+Templates/XML=XML
 Templates/XML/emptyDTD.dtd=DTD Entity
-Templates/XML/XMLWizard.xml=XML Document Wizard
+Templates/XML/XMLWizard.xml=XML Document
 Templates/XML/XMLwithROOT.xml=XML Document
 Templates/XML/XMLwithDTD.xml=XML With DTD
 Templates/XML/xhtml.xml=XHTML Document
@@ -26,8 +26,8 @@ Templates/XML/StyleSheet.xsl=XSL Stylesheet
 Templates/XML/xml_entity.ent=XML Parsed Entity
 
 # JavaHelp
-Menu/Help/HelpShortcuts/org-netbeans-modules-xml-core-docs-mainpage.xml=XML Support
-Actions/Help/org-netbeans-modules-xml-core-docs-mainpage.xml=XML Support
+Menu/Help/HelpShortcuts/org-netbeans-modules-xml-core-docs-mainpage.xml=XML Module Help
+Actions/Help/org-netbeans-modules-xml-core-docs-mainpage.xml=XML Module Help
 
 # File Types
 Services/MIMEResolver/XMLSchema.xml=XML Schemas
