--- a/xml.tools/src/org/netbeans/modules/xml/tools/doclet/Bundle.properties
+++ b/xml.tools/src/org/netbeans/modules/xml/tools/doclet/Bundle.properties
@@ -21,7 +21,7 @@ PAGE_TITLE=DTD Grammar Documentation
 
 ## DocletAction.java
 NAME_SUFFIX_Documentation=Documentation
-MSG_error_leaving_in_clipboard=An internal error occurred. Leaving html source text in the clipboard.
+MSG_error_leaving_in_clipboard=An internal error occurred. Leaving HTML source text in the clipboard.
 MSG_documentation_in_clipboard=The DTD documentation has been placed into the clipboard.
 MSG_generating_interrupted=Documentation generating interrupted.
 MSG_IO_ex_docwriting=An I/O exception occurred during documentation writing.
