language touch-up

--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/Bundle.properties
@@ -36,7 +36,7 @@ ACSN_CatalogMounterPanel=Entity catalog mounter
 ## CatalogRootNode.java
 TEXT_catalog_root=XML Entity Catalogs
 #it is HTML tooltip
-PROP_catalog_root_desc=It provides access to user entity catalogs.
+PROP_catalog_root_desc=Lets you mount and view entity catalogs.
 PROP_Mount_Catalog=Mount Catalog
 LBL_mount=Mount Catalog...
 
