--- a/debugger.jpda/build.xml
+++ b/debugger.jpda/build.xml
@@ -106,8 +106,41 @@ ToDo:
     <delete file="manifest-subst.mf"/>
     <delete file="debuggerjpda.nbm"/>
     <delete dir="netbeans"/>
+    <delete dir="javadoc"/>
     <delete dir="Info"/>
   </target>
+
+  <target name="javadoc" depends="check,no-such-luck,setup-jdkhome" description="Build debuggerjpda module API documentation.">
+    <tstamp/>
+    <property name="apis-footer" value="&lt;font size=-2 color=gray&gt;Built on ${TODAY}.&amp;nbsp;&amp;nbsp;|&amp;nbsp;&amp;nbsp;Portions Copyright 1997-2002 Sun Microsystems, Inc. All rights reserved.&lt;/font&gt;"/>
+    <echo message="Build debuggerjpda module API documentation..."/>
+    <mkdir dir="javadoc"/>
+    <javadoc destdir="javadoc"
+             packagenames="org.netbeans.modules.debugger.jpda,org.netbeans.modules.debugger.jpda.evaluator,org.netbeans.modules.debugger.jpda.util"
+             doctitle="NetBeans debuggerjpda module APIs"
+             windowtitle="NetBeans debuggerjpda module APIs"
+             bottom="${apis-footer}"
+             use="true"
+             splitindex="true"
+             author="false"
+             version="false"
+             maxmemory="384m"
+    >
+      <sourcepath>
+        <pathelement location="src"/>
+      </sourcepath>
+      <classpath>
+        <!-- this classpath probably should be the same as for compilation -->
+	<pathelement location="../openide/openide-13javac-workaround.jar"/>
+        <pathelement location="${jdkhome}/lib/tools.jar"/>
+        <fileset dir="../openide/netbeans/lib">
+          <include name="openide*.jar" />
+        </fileset>
+	<pathelement location="../debuggercore/netbeans/modules/autoload/debuggerCore.jar"/>
+      </classpath>
+    </javadoc>    
+  </target>
+
 </project>
 
 
