--- a/editor/build.xml
+++ b/editor/build.xml
@@ -18,6 +18,7 @@ Microsystems, Inc. All Rights Reserved.
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
   <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
+  <property name="binroot" value="../../nbextra"/>
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="../nbbuild/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="../nbbuild/nbantext.jar"/>
@@ -100,7 +101,41 @@ Microsystems, Inc. All Rights Reserved.
     <delete file="manifest-subst.mf"/>
     <delete file="editor.nbm"/>
     <delete dir="netbeans"/>
+    <delete dir="javadoc"/>
     <delete dir="Info"/>
+  </target>
+
+  <target name="javadoc" description="Build editor module API documentation.">
+    <tstamp/>
+    <property name="apis-footer" value="&lt;font size=-2 color=gray&gt;Built on ${TODAY}.&amp;nbsp;&amp;nbsp;|&amp;nbsp;&amp;nbsp;Portions Copyright 1997-2002 Sun Microsystems, Inc. All rights reserved.&lt;/font&gt;"/>
+    <echo message="Build editor module API documentation..."/>
+    <mkdir dir="javadoc"/>
+    <javadoc destdir="javadoc"
+             packagenames="org.netbeans.editor,org.netbeans.editor.ext,org.netbeans.editor.ext.html,org.netbeans.editor.ext.java,org.netbeans.editor.ext.plain,org.netbeans.editor.ext.html.dtd,org.netbeans.modules.editor,org.netbeans.modules.editor.html,org.netbeans.modules.editor.java,org.netbeans.modules.editor.options,org.netbeans.modules.editor.plain"
+             doctitle="NetBeans editor module APIs"
+             windowtitle="NetBeans editor module APIs"
+             bottom="${apis-footer}"
+             use="true"
+             splitindex="true"
+             author="false"
+             version="false"
+             maxmemory="384m"
+    >
+      <sourcepath>
+        <pathelement location="libsrc"/>
+        <pathelement location="src"/>
+      </sourcepath>
+      <classpath>
+        <pathelement location="../core/netbeans/lib/core.jar"/>
+        <pathelement location="libsrc"/>
+	<pathelement location="../openide/openide-13javac-workaround.jar"/>
+        <fileset dir="../openide/netbeans/lib">
+          <include name="openide*.jar" />
+        </fileset>
+        <pathelement location="${binroot}/core/release/lib/ext/regexp.jar"/>
+        <pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>
+      </classpath>
+    </javadoc>    
   </target>
 
 </project>
