--- a/html/build.xml
+++ b/html/build.xml
@@ -72,12 +72,42 @@ Microsystems, Inc. All Rights Reserved.
     <delete file="manifest-subst.mf"/>
     <delete file="html.nbm"/>
     <delete dir="netbeans"/>
+    <delete dir="javadoc"/>
     <delete dir="Info"/>
   </target>
 
   <!-- This target will only work *inside* the IDE! -->
   <target name= "test" depends="jars" description="Test the module inside the running IDE." >
     <nbinstaller action="reinstall" module="netbeans/modules/html.jar"/>
+  </target>
+  
+  <target name="javadoc" description="Build html module API documentation.">
+    <tstamp/>
+    <property name="apis-footer" value="&lt;font size=-2 color=gray&gt;Built on ${TODAY}.&amp;nbsp;&amp;nbsp;|&amp;nbsp;&amp;nbsp;Portions Copyright 1997-2002 Sun Microsystems, Inc. All rights reserved.&lt;/font&gt;"/>
+    <echo message="Build html module API documentation..."/>
+    <mkdir dir="javadoc"/>
+    <javadoc destdir="javadoc"
+             packagenames="org.netbeans.modules.html"
+             doctitle="NetBeans html module APIs"
+             windowtitle="NetBeans html module APIs"
+             bottom="${apis-footer}"
+             use="true"
+             splitindex="true"
+             author="false"
+             version="false"
+             maxmemory="384m"
+    >
+      <sourcepath>
+        <pathelement location="src"/>
+      </sourcepath>
+      <classpath>
+        <!-- this classpath probably should be the same as for compilation -->
+	<pathelement location="../openide/openide-13javac-workaround.jar"/>
+        <fileset dir="../openide/netbeans/lib">
+          <include name="openide*.jar" />
+        </fileset>
+      </classpath>
+    </javadoc>    
   </target>
 
 </project>
