--- a/o.openidex.util/build.xml
+++ b/o.openidex.util/build.xml
@@ -75,7 +75,38 @@ Microsystems, Inc. All Rights Reserved.
     <delete file="manifest-subst.mf"/>
     <delete file="openidex.nbm"/>
     <delete dir="netbeans"/>
+    <delete dir="javadoc"/>
     <delete dir="Info"/>
+  </target>
+
+  <target name="javadoc" description="Build openidex module API documentation.">
+    <tstamp/>
+    <property name="apis-footer" value="&lt;font size=-2 color=gray&gt;Built on ${TODAY}.&amp;nbsp;&amp;nbsp;|&amp;nbsp;&amp;nbsp;Portions Copyright 1997-2002 Sun Microsystems, Inc. All rights reserved.&lt;/font&gt;"/>
+    <echo message="Build openidex module API documentation..."/>
+    <mkdir dir="javadoc"/>
+    <javadoc destdir="javadoc"
+             packagenames="org.netbeans.api.looks,org.netbeans.modules.looks,org.netbeans.spi.looks,org.openidex.nodes.looks,org.openidex.search"
+             doctitle="NetBeans openidex module APIs"
+             windowtitle="NetBeans openidex module APIs"
+             bottom="${apis-footer}"
+             use="true"
+             splitindex="true"
+             author="false"
+             version="false"
+             maxmemory="384m"
+    >
+      <sourcepath>
+        <pathelement location="src"/>
+        <pathelement location="looks/src"/>
+      </sourcepath>
+      <classpath>
+	<pathelement location="../openide/openide-13javac-workaround.jar"/>
+        <fileset dir="../openide/netbeans/lib">
+          <include name="openide*.jar" />
+        </fileset>
+        <pathelement location="${binroot}/core/release/lib/ext/xml-apis.jar"/>
+      </classpath>
+    </javadoc>    
   </target>
 
 </project>
