--- a/spi.debugger.ui/build.xml
+++ b/spi.debugger.ui/build.xml
@@ -89,6 +89,39 @@ Microsystems, Inc. All Rights Reserved.
     <delete file="manifest-subst.mf"/>
     <delete file="debuggercore.nbm"/>
     <delete dir="netbeans"/>
+    <delete dir="javadoc"/>
     <delete dir="Info"/>
   </target>
+
+  <target name="javadoc" depends="setup-jdkhome" description="Build debuggercore module API documentation.">
+    <tstamp/>
+    <property name="apis-footer" value="&lt;font size=-2 color=gray&gt;Built on ${TODAY}.&amp;nbsp;&amp;nbsp;|&amp;nbsp;&amp;nbsp;Portions Copyright 1997-2002 Sun Microsystems, Inc. All rights reserved.&lt;/font&gt;"/>
+    <echo message="Build debuggercore module API documentation..."/>
+    <mkdir dir="javadoc"/>
+    <javadoc destdir="javadoc"
+             packagenames="org.netbeans.modules.debugger,org.netbeans.modules.debugger.delegator,org.netbeans.modules.debugger.multisession,org.netbeans.modules.debugger.support,org.netbeans.modules.debugger.support.actions,org.netbeans.modules.debugger.support.java,org.netbeans.modules.debugger.support.java.nodes,org.netbeans.modules.debugger.support.nodes,org.netbeans.modules.debugger.support.util"
+             doctitle="NetBeans debuggercore module APIs"
+             windowtitle="NetBeans debuggercore module APIs"
+             bottom="${apis-footer}"
+             use="true"
+             splitindex="true"
+             author="false"
+             version="false"
+             maxmemory="384m"
+    >
+      <sourcepath>
+        <pathelement location="src"/>
+      </sourcepath>
+      <classpath>
+        <!-- this classpath probably should be the same as for compilation -->
+	<pathelement location="../openide/openide-13javac-workaround.jar"/>
+        <pathelement location="${jdkhome}/lib/tools.jar"/>
+        <fileset dir="../openide/netbeans/lib">
+          <include name="openide*.jar" />
+        </fileset>
+	<pathelement location="../debuggercore/netbeans/modules/autoload/debuggerCore.jar"/>
+      </classpath>
+    </javadoc>    
+  </target>
+
 </project>
