--- a/testtools/build.xml
+++ b/testtools/build.xml
@@ -155,6 +155,14 @@ Microsystems, Inc. All Rights Reserved.
              compress="true"/>
     </target>
 
+  <target name="realclean" depends="clean">
+    <ant dir="../jemmysupport" antfile="build.xml" target="realclean"/>
+    <ant dir="../jellytools" antfile="build.xml" target="clean"/>
+    <ant dir="../xtest" antfile="build.xml" target="clean"/>
+    <ant dir="../junit" antfile="build.xml" target="clean"/>
+  </target>
+
+
 </project>
 
 
