Small I18N changes and clarifications.

--- a/web.core/src/org/netbeans/modules/web/core/jsploader/Bundle.properties
+++ b/web.core/src/org/netbeans/modules/web/core/jsploader/Bundle.properties
@@ -104,6 +104,8 @@ MSG_ConvertToServletQuestion=Mark a general Java source file {0} as a Servlet so
 MSG_ConvertToJavaQuestion=Unmark a servlet file {0} so it is a general Java source file?
 LBL_ConvertToJavaAction=Cancel Servlet
 MSG_CannotConvertToServlet=File {0} cannot be converted to servlet. It doesn''t implement javax.servlet.Servlet interface.
+ERR_CannotConvertToServlet=File {0} cannot be converted to servlet. It does not represent a Java source.
+ERR_ServletNotMarked=Error marking file {0} as servlet.
 
 PROP_item_name=Web Module
 HINT_item_name=Name of web module
