--- a/form/src/org/netbeans/modules/form/palette/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/palette/Bundle.properties
@@ -44,6 +44,7 @@ ACSD_PaletteTabbedPane=N/A
 ACS_PaletteBeansList={0}
 ACSD_PaletteBeansList=List of components
 HINT_PaletteComponent=Component Palette
+CTL_EmptyPaletteMenu=<empty>
 
 # context menu on control part of Component Palette
 CTL_ShowPalette=Show Palette
