--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -144,7 +144,7 @@ CTL_ConfigureShortcuts=&Keyboard Shortcuts...
 CTL_ConfigureShortcuts_Title=Keyboard Shortcuts
 
 #OptionsAction
-Options=&Options...
+Options=&Options
 CTL_close_button=Close
 CTL_close_button_mnemonic=C
 CTL_help_button=Help
@@ -166,7 +166,7 @@ RecognizedExtensions=.zip;.ziP;.zIp;.zIP;.Zip;.ZiP;.ZIp;.ZIP;.jar;.jaR;.jAr;.jAR
 CTL_ChangeUIMode=DI Mode
 
 # SetupWizardAction
-LBL_SetupWizard=Setup &Wizard...
+LBL_SetupWizard=Setup &Wizard
 HINT_SetupWizard=Run the wizard that has been shown when the IDE started for the first time
 CTL_RestoreFrameAction=Restore
 CTL_MinimizeFrameAction=Minimize
