The "provider" renamed to "engine" on request from UI team. corrected references in mf-layer.xml

--- a/diff/src/org/netbeans/modules/diff/builtin/provider/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/provider/Bundle.properties
@@ -9,5 +9,5 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-BuiltInDiffProvider.displayName=Built In Diff Provider
+BuiltInDiffProvider.displayName=Built In Diff Engine
 BuiltInDiffProvider.shortDescription=
