--- a/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/builtin/Bundle.properties
@@ -13,13 +13,13 @@ DefaultDiff.displayName=Built In Diff Service
 
 MSG_NoDifference=No differences were found between ''{0}'' and ''{1}''.
 
-MSG_ProvidersMissing=There are no diff providers registered in the system
+MSG_ProvidersMissing=There are no diff engines registered in the system
 MSG_VisualizersMissing=There are no diff visualizers registered in the system
 
-LBL_Provider=Provider:
+LBL_Provider=Engine:
 
 LBL_Visualizer=Visualizer:
 
 # DefaultDiffBeanInfo
 PROP_showDiffSelector=Show Diff Service Selector
-HINT_showDiffSelector=Show panel with provider and visualizer selectors.
+HINT_showDiffSelector=Show panel with engine and visualizer selectors.
