--- a/testtools/build.xml
+++ b/testtools/build.xml
@@ -21,7 +21,8 @@ Microsystems, Inc. All Rights Reserved.
   <property name="nbm_alias" value="nb_ide"/>
   <property name="homepage.base" value="netbeans.org"/>
   <property name="dist.base" value="www.netbeans.org/download/nbms/40"/>
-  <property name="license.file" value="../nbbuild/standard-nbm-license.txt"/>
+  <property name="module.license.file" value="../nbbuild/standard-nbm-license.txt"/>
+  <property name="xtest.license.file" location="xtest-license.txt"/>
 
   <taskdef name="makenbm" classname="org.netbeans.nbbuild.MakeNBM" classpath="${nbext}/nbantext.jar"/>
   <taskdef name="genlist" classname="org.netbeans.nbbuild.MakeListOfNBM" classpath="${nbext}/nbantext.jar"/>
@@ -103,7 +104,13 @@ Microsystems, Inc. All Rights Reserved.
              module="netbeans/modules/testtools.jar"
 	     homepage="http://testtools.${homepage.base}"
 	     distribution="${dist.base}/testtools.nbm">
-      <license file="${license.file}"/>
+      <license name="testtools-license.txt">
+        <text>For the Test Tools Module itself:</text>
+        <file location="${module.license.file}"/>
+        <text>For the XTest binary distribution:</text>
+        <file location="${xtest.license.file}"/>
+      </license>
+
 <!--      <signature keystore="${keystore}" storepass="${storepass}" alias="${nbm_alias}"/> -->
     </makenbm>
   </target>
