FormDesigner layers organization simplified and improved.

--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -446,8 +446,12 @@ FMT_MSG_AddComponent=Add {0} to {1}.
 # {0} = short class name (without package) of the component to add
 FMT_MSG_AddToOthers=Add {0} to Other Components.
 
-# resizing FormDesigner
-FMT_MSG_RESIZING_FORMDESIGNER=Resizing FormDesigner to size {0}, {1}.
+# form designer resizing
+# {0} = current designer width
+# {1} = current designer height
+FMT_HINT_DesignerResizing=[{0}, {1}] To set the designer size, drag or doubleclick the border.
+CTL_SetDesignerSize_Title=Set Form Desiger Size
+CTL_SetDesignerSize_Label=New Size (width, height):
 
 # Events
   MSG_CannotAttach=\
