#23623 implementation - code for setting splash progress bar values added.

--- a/o.n.core/src/org/netbeans/core/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/Bundle.properties
@@ -40,16 +40,27 @@ ACSD_AboutDialog=N/A
 ACSN_AboutTabs=N/A
 ACSD_AboutTabs=N/A
 #NOI18N
-SPLASH_WIDTH=520
+SPLASH_WIDTH=400
 #NOI18N
-SPLASH_HEIGHT=316
+SPLASH_HEIGHT=300
+
+#NOI18N
+SplashShowProgressBar=true
 
 # x, y, w, h
 #NOI18N
-SplashRunningTextBounds=78, 60, 362, 20
+SplashRunningTextBounds=84, 138, 306, 20
+#NOI18N
+SplashProgressBarBounds=84, 160, 232, 3
 # RGB
 #NOI18N
 SplashRunningTextColor=0x000000
+#NOI18N
+SplashProgressBarColor=0xFF7200
+#NOI18N
+SplashProgressBarEdgeColor=0xF66E03
+#NOI18N
+SplashProgressBarCornerColor=0x8B452C
 # x, y, w, h
 #NOI18N
 AboutTextBounds=78, 60, 362, 20
