--- a/spi.debugger.ui/src/org/netbeans/modules/debugger/resources/Bundle.properties
+++ b/spi.debugger.ui/src/org/netbeans/modules/debugger/resources/Bundle.properties
@@ -18,3 +18,5 @@ Services/DebuggerType/org-netbeans-modules-debugger-delegator-DefaultDebuggerTyp
 Services/Executor/org-netbeans-modules-debugger-multisession-DebuggerExecutor.settings=Debugger Execution
 Templates/Services/DebuggerType/org-netbeans-modules-debugger-delegator-DefaultDebuggerType.settings=Default Debugging
 Templates/Services/Executor/org-netbeans-modules-debugger-multisession-DebuggerExecutor.settings=Debugger Execution
+Menu/Debug/Start Session=&Start Session
+Menu/Debug/Stack=Stack
