bugfix #24130 - updated Keyboard Shortcut name

--- a/o.n.core/src/org/netbeans/core/actions/Bundle.properties
+++ b/o.n.core/src/org/netbeans/core/actions/Bundle.properties
@@ -140,7 +140,7 @@ CTL_Mount=Mount
 CTL_MountType=Mount {0}...
 
 
-CTL_ConfigureShortcuts=&Keyboard Shortcuts...
+CTL_ConfigureShortcuts=&Keyboard Shortcuts
 CTL_ConfigureShortcuts_Title=Keyboard Shortcuts
 
 #OptionsAction
