#24110 provide extra text for empty URLs.

--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/Bundle.properties
@@ -22,6 +22,7 @@ TEXT_system_catalog_desc=Read-only IDE system catalog (useful for IDE module dev
 ## XCatalog.java
 # {0} = location
 PROP_display_name=XML Catalog at {0}
+PROP_missing_location=XML Catalog (no URL)
 
 ## XCatalogBeanInfo.java
 NAME_x_catalog=XML Catalog
