--- a/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
+++ b/xml.catalog/src/org/netbeans/modules/xml/catalog/impl/sun/Bundle.properties
@@ -32,6 +32,7 @@ HINT_pp=Prefer public IDs over system IDs during entity resolution.
 #{0} is a catalog location
 TITLE_catalog=Resolver at {0}
 MSG_prepared=Ready to load catalog at {0}.
+PROP_missing_location=Resolver (no URL)
 
 #{0} exception message
 DESC_error_loading=Error: {0}
