24169: I18N - The state of the thread does not come from Bundle.properties

--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -331,5 +331,11 @@ CTL_Host_mnemonic=o
 #in the "Attach" dialog
 CTL_Port=Port:
 
-#in the "Attach" dialog
-CTL_Port_mnemonic=P
+#JPDAThread
+CTL_Thread_state_unknown=Unknown
+CTL_Thread_state_zombie=Zombie
+CTL_Thread_state_running=Running
+CTL_Thread_state_sleeping=Sleeping
+CTL_Thread_state_monitor=Monitor
+CTL_Thread_state_wait=Wait
+CTL_Thread_state_not_started=Not Started
