UI polishing, issue #23994

--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/wizards/shortcut/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/wizards/shortcut/Bundle.properties
@@ -26,6 +26,7 @@ ACS_IP_LBL_add_to_project=N/A
 IP_LBL_add_menu_item=\ Add a menu item
 ACS_IP_LBL_add_menu_item=N/A
 STP_TEXT_choose_script_and_target=Choose a target from an existing build script:
+STP_TEXT_choose_script_and_target_mnem=c
 STP_LBL_display_name=Display name of shortcut:
 STP_LBL_code_name=Simple file name of shortcut:
 SI_LBL_select_ant_target=Select Ant Target
