Adding shortDescriptions to FileSystem nodes. Works on switch only for now. For more info please see the issue #23607

--- a/o.n.core/src/org/netbeans/beaninfo/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/Bundle.properties
@@ -18,11 +18,13 @@
 # Local
 PROP_rootDirectory=Root Directory
 HINT_rootDirectory=The root directory of this file system (should be the top of the package hierarchy).
+HINT_localFileSystem=Local Filesystem
 
 # JAR
 PROP_archiveFile=Archive File
 HINT_archiveFile=The archive file this file system represents.
 LAB_JarFileFilter=Archive Files (*.jar, *.zip, *.war, *.ear)
+HINT_jarFileSystem=Jar Filesystem
 
 # Properties of FileSystem
 PROP_readOnly=Read Only
