24205: Missing key in Bundle

--- a/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
+++ b/debugger.jpda/src/org/netbeans/modules/debugger/jpda/Bundle.properties
@@ -331,6 +331,9 @@ CTL_Host_mnemonic=o
 #in the "Attach" dialog
 CTL_Port=Port:
 
+#in the "Attach" dialog
+CTL_Port_mnemonic=P
+
 #JPDAThread
 CTL_Thread_state_unknown=Unknown
 CTL_Thread_state_zombie=Zombie
