--- a/form/src/org/netbeans/modules/form/Bundle.properties
+++ b/form/src/org/netbeans/modules/form/Bundle.properties
@@ -511,8 +511,10 @@ CTL_SetDesignerSize_Label=New Size (width, height):
   CTL_CW_ConnectionSource=Activation Event on Source
   CTL_CW_SourceComponent=Source Component:
   CTL_CW_SourceComponent_Mnemonic=S
+  CTL_CW_SourceComponent_Hint=The source component of the triggering event
   CTL_CW_Event=Events
   CTL_CW_Event_Mnemonic=E
+  CTL_CW_Event_Hint=Choose the triggering event on the source component.
   CTL_CW_EventHandlerMethod=Event Handler Method
   CTL_CW_MethodName=Method Name:
   CTL_CW_MethodName_Mnemonic=M
@@ -526,12 +528,16 @@ CTL_SetDesignerSize_Label=New Size (width, height):
   CTL_CW_ConnectionTarget=Operation on Target
   CTL_CW_TargetComponent=Target Component:
   CTL_CW_TargetComponent_Mnemonic=T
+  CTL_CW_TargetComponent_Hint=The target component of the operation triggered by the event.
   CTL_CW_SetProperty=Set Property
   CTL_CW_SetProperty_Mnemonic=S
+  CTL_CW_SetProperty_Hint=Select this radio button to specify a property to be set on the target component.
   CTL_CW_MethodCall=Method Call
   CTL_CW_MethodCall_Mnemonic=M
+  CTL_CW_MethodCall_Hint=Select this radio button to specify a method to be called on the target component.
   CTL_CW_XUserCode=User Code
   CTL_CW_XUserCode_Mnemonic=U
+  CTL_CW_XUserCode_Hint=Select this radio button to specify your own code.
   CTL_CW_UserCodeText1=After clicking Finish, enter the custom code
   CTL_CW_UserCodeText2=for handling the event in the Editor.
   ACSD_CW_TargetComponent=N/A
