--- a/o.n.core/src/org/netbeans/beaninfo/Bundle.properties
+++ b/o.n.core/src/org/netbeans/beaninfo/Bundle.properties
@@ -24,7 +24,7 @@ HINT_localFileSystem=Local Filesystem
 PROP_archiveFile=Archive File
 HINT_archiveFile=The archive file this file system represents.
 LAB_JarFileFilter=Archive Files (*.jar, *.zip, *.war, *.ear)
-HINT_jarFileSystem=Jar Filesystem
+HINT_jarFileSystem=JAR Filesystem
 
 # Properties of FileSystem
 PROP_readOnly=Read Only
