"Patch..." action renamed "Apply Patch..." and the filechooser for patch has the patched file in it's title. Also 2 notifications added - when there are no differences in the patch file and when the patch was applied successfully. This is the first step to fix issue #24091.

--- a/diff/src/org/netbeans/modules/diff/Bundle.properties
+++ b/diff/src/org/netbeans/modules/diff/Bundle.properties
@@ -30,14 +30,16 @@ CTL_DiffActionName=Diff
 CTL_DiffSettings=Diff Settings
 
 # PatchAction
-CTL_PatchActionName=Patch...
+CTL_PatchActionName=Apply Patch...
 EXC_PatchParsingFailed=Parsing of the patch file failed: {0}
-TITLE_SelectPatch=Select The Patch File
+TITLE_SelectPatch=Select The Patch For {0}
 BTN_Patch=Patch
 BTN_Patch_mnc=P
 BTN_Patch_tooltip=Select the patch file to apply.
+MSG_NoDifferences=No differences found in file {0}.
 EXC_PatchApplicationFailed=Application of the patch failed: {0}
 EXC_CopyOfAppliedPatchFailed=Copy of the applied patch failed ({0}). The applied file is at {1}.
+MSG_PatchAppliedSuccessfully=Patch applied successfully.
 
 # DiffSettingsBeanInfo
 PROP_diffService=Default Diff Service
